created r markdown file

--- a/HW2.Rmd
+++ b/HW2.Rmd
@@ -5,16 +5,16 @@ date: "2025-01-31"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
 
-## Super Bowl Ad Engagement Analysis
+# Super Bowl Ad Engagement Analysis
 
-Introduction
+## Introduction
 
 Super Bowl advertisements are a crucial aspect of the annual sports event, attracting millions of viewers and significant brand investment. This project analyzes Super Bowl ad engagement metrics to determine what factors contribute to higher audience interactions, particularly through YouTube likes and comments. The study also explores brand performance, humor's impact on engagement, and the relationship between TV viewership and online interactions.
 
-Dataset Overview
+## Dataset Overview
 
 The dataset consists of Super Bowl advertisements from 2000 onwards, enriched with additional metrics such as:
 
@@ -38,12 +38,12 @@ library(scales)
 library(RColorBrewer)
 
 #superbowl data from tody tuesday 
-sb <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-02/youtube.csv')
+sb <- fread('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-02/youtube.csv')
 sb <- as.data.table(sb)
 skim(sb)
 
 #enriching the data by scraping data from Statista
-superbowl_scraped <- read_csv("https://raw.githubusercontent.com/ghadena/C3-R/refs/heads/main/superbowl_scraped.csv")
+superbowl_scraped <- fread("https://raw.githubusercontent.com/ghadena/C3-R/refs/heads/main/superbowl_scraped.csv")
 superbowl_scraped <- as.data.table(superbowl_scraped)
 superbowl_scraped <- superbowl_scraped[year >= 2000, ] #filtering for years after 2000 
 skim(superbowl_scraped)
@@ -97,10 +97,14 @@ logical_vars <- sb %>%
 We examined seven key attributes across Super Bowl commercials:
 Humor, Celebrities, Animals, Patriotism, Danger, Sex Appeal and Product Placement
 
+To answer the first research question, I aggregated the dataset, calculating the average likes and average comments for ads with and without each attribute. Then counted how many times each attribute appeared in the dataset to understand their prevalence. and finally created visualizations to compare engagement across different categories.
+
 Findings:
-- Funny ads receive fewer likes but more views, suggesting entertainment value but lower engagement.
-- Celebrity appearances strongly correlate with high likes, particularly for brands like NFL and Pepsi.
-- Product placement increases engagement, likely due to clear brand messaging.
+	**- Patriotic ads**: While most Super Bowl ads do not feature patriotic imagery, those that do receive the highest average likes and comments, possibly due to their emotional appeal.
+	**- Product visibility:** Many ads show the product quickly, but this does not significantly affect likes or comments.
+	**- Use of sex:** The majority of ads avoid using sexual content—likely because the Super Bowl is a family-friendly event.
+	**-	Celebrity appearances & danger elements:** Ads featuring celebrities and a sense of danger tend to generate more likes and comments than those without these elements.
+	**-	Humorous ads paradox:** Surprisingly, funny ads received fewer likes and comments compared to non-funny ads. Initially, we suspected this was due to a lower number of funny ads, but this was not the case—there were almost twice as many funny ads as non-funny ones. This unexpected trend led us to investigate further in the next section.
 
 
 ```{r Attribute analysis}
@@ -108,7 +112,7 @@ Findings:
 # Define the list of categorical columns
 categories <- c("funny", "patriotic", "celebrity", "danger", "animals", "use_sex", "show_product_quickly")
 
-# Initialize an empty data.table to store results
+# Initialize an empty data.table to store aggregated results
 cat_agg <- data.table(category = character(), value = logical(), avg_likes = numeric(), avg_comments = numeric())
 
 # Loop through each category and compute avg_likes and avg_comments
@@ -123,50 +127,404 @@ for (category in categories) {
 setcolorder(cat_agg, c("category", "value", "avg_likes", "avg_comments")) # Reorder columns for clarity
 print(cat_agg)
 
-
 ```
+Visualizations
 
-Visualization:
+To illustrate these insights, I included three grouped bar charts:
+	1.	Count of occurrences of each attribute in the dataset.
+	2.	Average likes received by ads based on whether they had the attribute or not.
+	3.	Average comments received by ads based on whether they had the attribute or not.
 
-Bar charts comparing likes and comments for ads with and without each attribute.
-Stacked bar charts showing the percentage of each attribute used by major brands.
-
+These visualizations help us identify patterns in Super Bowl ad engagement and provide insights into which elements contribute to higher audience interaction.
 ```{r visuals}
-# chart 1: Plot logical variables
+
+#chart 1 counting the occurrence of categories 
 ggplot(logical_vars, aes(x = Variable, fill = Value)) +
   geom_bar(position = "dodge") +
-  ggtitle("Count of Logical Variables") +
-  xlab("Logical Variables") +
+  ggtitle("Count of Ad Attributes") +
+  xlab("Categorical Attributes") +
   ylab("Count") +
   theme_minimal() +
   scale_fill_manual(values = c("TRUE" = "blue", "FALSE" = "red"))
 
-#chart 2 avg likes by cat 
+#chart 2 average likes by category 
 ggplot(cat_agg, aes(x = category, y = avg_likes, fill = value)) +
   geom_bar(stat = "identity", position = "dodge") +
   labs(title = "Average Likes by Category", x = "Category", y = "Average Likes", fill = "Value (TRUE/FALSE)") +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
-#chart 3 avg commnets by cat
+#chart 3 average commnets by category
 ggplot(cat_agg, aes(x = category, y = avg_comments, fill = value)) +
   geom_bar(stat = "identity", position = "dodge") +
   labs(title = "Average Comments by Category", x = "Category", y = "Average Comments", fill = "Value (TRUE/FALSE)") +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
+```
+
+## Does Humor Really Boost Engagement? Investigating Funny Super Bowl Ads
+
+My initial analysis showed that funny ads received fewer likes and comments than non-funny ones, despite making up the majority of the dataset. To understand why, I explored several factors.
+
+**Do Funny Ads Actually Get Less Engagement?**
+
+Since humor was expected to drive engagement, I first checked whether funny ads simply had fewer observations, but they actually outnumbered non-funny ads nearly 2:1. This ruled out sample size as a factor. Next, I examined whether funny ads had more variation in likes, but the standard deviation was lower than for non-funny ads. This means funny ads were more consistent in performance. I also analyzed the trend of average likes over time for funny vs. non-funny ads, but the results were inconclusive, showing a largely random pattern—possibly due to a few viral ads and small sample size heavily distorting the data.
+
+**Do Other Factors Influence Funny Ads’ Performance?**
+
+Certain ad attributes, like celebrity appearances, typically boost engagement. However, I found that celebrity ads that weren’t funny performed best (~10,000 likes on average), while funny ads without celebrities got ~4,700 likes. Funny ads with celebrities performed even worse. This suggests that while celebrities usually increase engagement, humor weakens their impact, possibly by shifting focus away from them.
+
+**Are Funny Ads More Entertaining But Less Engaging?**
+
+Although funny ads received fewer likes per view, they were watched more often than non-funny ads. This suggests they are entertaining enough to keep viewers watching, but not compelling enough to drive interaction. A check on dislikes revealed that funny ads also received fewer dislikes, reinforcing the idea that they are well-received but not particularly engaging.
+
+**Are Funny Ads Misclassified?**
+
+The dataset defines a funny ad as jokey, goofy, weird, or silly, or one that attempts to be humorous. However, after reviewing top-performing ads, I found that some—like Super Bowl Babies Choir and Budweiser’s Donkey ad—weren’t labeled as funny, even though they fit the definition. This suggests potential misclassification, which may affect results. 
+
+Humor is highly subjective—what one person finds funny, another may not. Unlike other attributes like celebrity appearances, animals, or product placement, which are more objective, humor varies by perception. This subjectivity could explain why the data contradicts expectations, showing that funny ads receive fewer likes and comments despite their entertainment value.
+
+```{r funny ads}
+#lets check the distribution of funny videos (count and standard deviation)
+dt[, .N, by = funny] 
+dt[, .(avg_likes = mean(like_count, na.rm = TRUE), 
+       sd_likes = sd(like_count, na.rm = TRUE)), 
+   by = funny] 
+
+#examining the trend overtime 
+dt[, .(avg_likes = mean(like_count, na.rm = TRUE)), by = .(year, funny)][order(year, -avg_likes)]
+ggplot(dt[, .(avg_likes = mean(like_count, na.rm = TRUE)), by = .(year, funny)], 
+       aes(x = year, y = avg_likes, color = funny, group = funny)) +
+  geom_line(size = 1) +
+  geom_point(size = 2) +
+  labs(title = "Trend of Average Likes Over Time (Funny vs. Not Funny Ads)", 
+       x = "Year", y = "Average Likes", color = "Funny") +
+  theme_minimal()
+
+#examining the influence of other factors
+dt[, .(avg_likes = mean(like_count, na.rm = TRUE)), by = .(funny, celebrity, animals)][order(-avg_likes)] 
+
+#funny videos get more views but less likes 
+dt[, .(avg_views = mean(view_count, na.rm = TRUE), avg_likes = mean(like_count, na.rm = TRUE)), by = funny] 
+dt[, likes_per_view := like_count / view_count]
+ggplot(dt[, .(avg_likes_per_view = mean(likes_per_view, na.rm = TRUE)), by = funny], 
+       aes(x = as.factor(funny), y = avg_likes_per_view, fill = as.factor(funny))) +
+  geom_bar(stat = "identity") +
+  labs(title = "Likes per View: Funny vs. Not Funny Ads", 
+       x = "Funny", y = "Average Likes per View") +
+  theme_minimal()   
+
+#lets check the another engagement metric, number of dislikes.
+dt[, .(avg_dislikes = mean(dislike_count, na.rm = TRUE)), by = funny]
+
+#lets check the top 20 videos by engagement and examine potential classification issues. (superbowl babay choir and the budwiser donley videos are misclassified imo)
+dt[order(-like_count)][1:20, .(year, funny, brand, title, like_count, view_count)]
+
+```
+**Visualizing Likes Distribution for Funny vs. Non-Funny Ads**
+
+To compare engagement, I created three boxplots:
+	•	The first included all ads, showing non-funny ads had higher likes overall.
+	•	The second excluded the top 5% of extreme values, revealing clearer patterns.
+	•	The third used a log scale, further confirming that non-funny ads consistently received more likes than funny ones.
+```{r funny ads visuals}
+
+# including all observations
+ggplot(dt, aes(x = as.factor(funny), y = like_count, fill = as.factor(funny))) +
+  geom_boxplot() +
+  labs(title = "Likes Distribution: Funny vs. Non-Funny Ads", 
+       x = "Funny", y = "Like Count", fill = "Funny") +
+  theme_minimal()
+
+# excluding outliars - top 5% 
+dt_filtered <- dt[like_count <= quantile(like_count, 0.95, na.rm = TRUE)]
+
+ggplot(dt_filtered, aes(x = as.factor(funny), y = like_count, fill = as.factor(funny))) +
+  geom_boxplot() +
+  labs(title = "Likes Distribution (Excluding Top 5% Outliers): Funny vs. Non-Funny Ads", 
+       x = "Funny", y = "Like Count", fill = "Funny") +
+  theme_minimal()
+
+# on log scale 
+ggplot(dt, aes(x = as.factor(funny), y = like_count, fill = as.factor(funny))) +
+  geom_boxplot() +
+  scale_y_log10() +
+  labs(title = "Likes Distribution (Log Scale): Funny vs. Non-Funny Ads", 
+       x = "Funny", y = "Log10(Likes)", fill = "Funny") +
+  theme_minimal()
 
 ```
 
-##Trend Analysis: Humor and Engagement Over Time
+**Ad Success Is More Than Just Likes**
 
-A time series analysis of funny vs. non-funny ads revealed that humor does not always translate to higher likes.
-The trend suggests that celebrity + humor leads to lower engagement, possibly due to a diluted brand message.
+While my analysis focuses on likes and comments as engagement metrics, they do not fully define ad success. A truly successful ad could drive sales, brand awareness, or cultural impact—factors that are difficult to quantify but often more important than online engagement. Some funny ads may generate buzz or brand recognition without necessarily earning more likes.
 
+While humor is often seen as a winning strategy, simply being funny does not guarantee engagement. Other elements—emotional appeal, storytelling, and branding strategies—may play a bigger role in making an ad truly successful.
 
+## Brand Performance: Which Brands Dominate Engagement?
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+To investigate which brands consistently received higher likes and engagement, I created two datasets:
+	1.	Brand Performance Table – Calculated average likes, comments, dislikes, and ad counts for each brand.
+	2.	Attribute Composition Table – Measured how often each brand used specific features (e.g., funny, celebrity, patriotic) in their ads, expressed as percentages. This table also included average likes, comments, dislikes, and views per brand.
+	
+	
+```{r brand enagement }
+# Calculate average likes, comments, dislikes, and ad counts for each brand
+brand_engagement <- dt[, .(
+  avg_likes = mean(like_count, na.rm = TRUE),
+  avg_comments = mean(comment_count, na.rm = TRUE),
+  avg_dislikes = mean(dislike_count, na.rm = TRUE),
+  total_ads = .N
+), by = brand][order(-avg_likes)]
+
+print(brand_engagement)
+
+# Calculate attribute contribution and average engagement (likes, comments, dislikes)
+attribute_contribution <- dt[, .(
+  funny_pct = mean(funny, na.rm = TRUE) * 100,
+  celebrity_pct = mean(celebrity, na.rm = TRUE) * 100,
+  animals_pct = mean(animals, na.rm = TRUE) * 100,
+  product_pct = mean(show_product_quickly, na.rm = TRUE) * 100,
+  patriotic_pct = mean(patriotic, na.rm = TRUE) * 100,
+  danger_pct = mean(danger, na.rm = TRUE) * 100,
+  sex_pct = mean(use_sex, na.rm = TRUE) * 100,
+  avg_likes = mean(like_count, na.rm = TRUE),
+  avg_comments = mean(comment_count, na.rm = TRUE),
+  avg_dislikes = mean(dislike_count, na.rm = TRUE), 
+  avg_views = mean(view_count, na.rm = TRUE)  # Removed * 100
+), by = brand][order(-avg_likes)]
+
+print(attribute_contribution)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+**Which Brands Receive the Most Likes?**
+
+A simple bar chart of average likes per brand revealed that:
+	•	NFL led with ~25,000 average likes per ad.
+	•	Doritos followed with ~15,000.
+	•	Coca-Cola, Budweiser, and Bud Light came next.
+	•	The remaining brands—Pepsi, Toyota, E-Trade, Hyundai, and Kia—all averaged under 1,000 likes per ad.
+	
+```{r avg likes}
+#average likes per brand 
+ggplot(attribute_contribution, aes(x = reorder(brand, -avg_likes), y = avg_likes, fill = brand)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Average Likes by Brand", x = "Brand", y = "Average Likes") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+**What Makes Certain Brands More Engaging?**
+
+To explore why some brands performed better, I normalized attribute percentages per brand to sum to 100% and converted the data into a long format for visualization.
+```{r visuals2}
+# Normalize attribute percentages to sum to 100% per brand
+attribute_contribution[, total_pct := funny_pct + celebrity_pct + animals_pct + product_pct + patriotic_pct + danger_pct + sex_pct]
+attribute_contribution[, ':=' (
+  funny_pct = funny_pct / total_pct * 100,
+  celebrity_pct = celebrity_pct / total_pct * 100,
+  animals_pct = animals_pct / total_pct * 100,
+  product_pct = product_pct / total_pct * 100,
+  patriotic_pct = patriotic_pct / total_pct * 100,
+  danger_pct = danger_pct / total_pct * 100,
+  sex_pct = sex_pct / total_pct * 100
+)]
+
+# Convert data to long format for the stacked bar
+attribute_long <- melt(attribute_contribution, id.vars = "brand",
+                       measure.vars = c("funny_pct", "celebrity_pct", "animals_pct", "product_pct", "patriotic_pct", "danger_pct", "sex_pct"),
+                       variable.name = "attribute", value.name = "percentage")
+
+```
+
+A stacked bar chart showed that NFL, the top performer, used celebrities the most, which may have contributed to its high engagement. NFL ads also incorporated patriotic themes more than any other brand, suggesting that emotional appeal might play a role in driving likes.
+
+```{r stacked bar chart}
+# chart 6: Create a 100% stacked bar chart
+ggplot(attribute_long, aes(x = reorder(brand, -percentage), y = percentage, fill = attribute)) +
+  geom_bar(stat = "identity", position = "fill") +  # "fill" ensures each bar sums to 100%
+  scale_y_continuous(labels = scales::percent_format(scale = 100)) +  # Format y-axis as percentages
+  labs(title = "Normalized Attribute Usage by Brand (100% Stacked Bar Chart)", 
+       x = "Brand", y = "Percentage of Ads", fill = "Attribute") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+**Adding an Extra Layer: Likes as a Percentage of Total Engagement**
+
+To enhance the analysis, I calculated each brand’s share of total likes and overlaid this on the stacked bar chart. This provided a clearer picture of how brand attributes correlate with engagement levels.
+
+Overall, brands that leveraged emotional appeal—celebrities, patriotism, and nostalgia—tended to achieve higher engagement, while those that relied more on product-focused or action-driven ads performed less consistently.
+
+```{r stacked bar chart w/ percentage of likes}
+# Calculate % of total likes for each brand
+total_likes <- sum(attribute_contribution$avg_likes, na.rm = TRUE)
+attribute_contribution[, likes_pct := (avg_likes / total_likes) * 100]
+
+ggplot() +
+  # Stacked bar chart (attributes)
+  geom_bar(data = attribute_long, 
+           aes(x = brand, y = percentage / 100, fill = attribute), 
+           stat = "identity", position = "fill") +
+  
+  # Line and points for % of total likes (on the same y-axis)
+  geom_line(data = attribute_contribution, 
+            aes(x = brand, y = likes_pct / 100, group = 1, color = "Likes % of Total"), 
+            size = 1.5) + 
+  geom_point(data = attribute_contribution, 
+             aes(x = brand, y = likes_pct / 100, color = "Likes % of Total"), 
+             size = 2) +  
+  scale_color_manual(values = c("Likes % of Total" = "black"), name = "Metric") +  # Add to legend
+  
+  # Labels for % of total likes
+  geom_text(data = attribute_contribution, 
+            aes(x = brand, y = (likes_pct / 100) + 0.04, label = paste0(round(likes_pct, 1), "%")), 
+            vjust = -0, color = "black", size = 2.5) +
+  
+  # Formatting
+  scale_y_continuous(labels = percent_format(), 
+                     breaks = seq(0, 1, by = 0.25),  # Set ticks at 0, 25, 50, 75, 100
+                     expand = expansion(mult = c(0, 0.1))) +  # Add space for labels
+  
+  labs(title = "Super Bowl Ad Strategies: Attribute Breakdown and Engagement Comparison by Brand", 
+       subtitle = "Analyzing the attribute composition of Super Bowl ads by top brands \nand how their content translates into audience engagement (measured by percentage of total likes).",
+       x = "Brand", y = "Percentage", fill = "Attribute") +
+  
+  # Theme adjustments
+  theme_minimal(base_size = 12) +  # Keep minimal theme
+  theme(panel.grid.major = element_blank(),   # Remove major grid lines
+        panel.grid.minor = element_blank(),   # Remove minor grid lines
+        axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1),
+        plot.title = element_text(hjust = 0.5, size = 15, margin = margin( b = 10)),  # Add top margin
+        plot.subtitle = element_text(hjust = 0, size = 10, margin = margin(b = 5)),  # Add bottom margin
+        plot.margin = margin(t = 20, r = 0, b = 10, l = 10)
+        )  # Better x-axis rotation
+```
+
+## Does Higher TV Viewership Lead to More Online Engagement?
+
+One question I explored was whether years with higher Super Bowl TV viewership also led to more engagement on YouTube. If more people saw the ads on TV, did that translate into more online reactions? This could help determine whether traditional TV exposure still influences digital engagement or if some brands are simply better at making viral ads.
+
+**Data Challenges & Adjustments**
+
+Initially, I plotted a scatter plot of TV views vs. YouTube likes per ad, but the visualization was misleading because:
+	1.	TV viewership data was aggregated per year, while likes were per individual ad, making direct comparisons inaccurate.
+	2.	A single extreme outlier—the 2012 Doritos ad (275,000 likes)—heavily skewed the trend.
+	
+```{r TV graph 1}
+#correcting column name
+setnames(dt, "tv_views(millions)", "tv_views_million")
+
+#TV viewership and youtube likes 
+ggplot(dt, aes(x = tv_views_million, y = like_count)) +
+  geom_point(alpha = 0.6) +
+  geom_point(data = dt[which.max(like_count)], aes(x = tv_views_million , y = like_count), 
+             color = "red", size = 3) +
+  scale_x_continuous(labels = scales::comma) +  # No scientific notation
+  scale_y_continuous(labels = scales::comma) +  # No scientific notation
+  labs(title = "YouTube Views vs. Likes",
+       x = "TV Views (millions)", y = "Likes",
+       subtitle = "Red point = Outlier (Doritos 2012 ad) with 275k Youtube Likes") +
+  theme_minimal()
+
+#identifying the outliar
+dt[which.max(view_count)]
+dt[which.max(like_count)]
+
+```
+
+To correct this, I aggregated likes per year and created a new yearly engagement dataset, allowing for a clearer comparison between average YouTube likes and total TV viewership per year.
+
+```{r annotaged scatterplot}
+# Aggregate data: Average likes per year
+yearly_engagement <- dt[, .(avg_likes = mean(like_count, na.rm = TRUE)), by = .(year, tv_views_million)]
+
+# Load necessary library for ColorBrewer palettes
+display.brewer.all()  # Shows all available palettes
+
+# Define a color palette for years
+year_colors <- brewer.pal(n = 12, name = "RdPu")  # Using a ColorBrewer palette
+
+# Identify the outliers
+max_outlier <- yearly_engagement[which.max(avg_likes)]  # 2012 (doritos ad - 275k likes)
+second_outlier <- yearly_engagement[order(-avg_likes)][2]  # 2020 
+second_outlier
+
+dt[order(-like_count)][2]  # (nfl LIV comercial - 175k likes)
+
+# Scatter plot with color and annotations
+ggplot(yearly_engagement, aes(x = tv_views_million, y = avg_likes, color = year)) +
+  geom_point(size = 4) +  # Bigger points
+  geom_smooth(method = "lm", se = FALSE, color = "black", linetype = "dashed") +  # Trend line
+  scale_x_continuous(labels = scales::comma) +  
+  scale_y_continuous(labels = scales::comma) +  
+  scale_color_gradientn(colors = brewer.pal(n = 9, name = "RdPu")) +  # Apply color scheme
+  labs(
+    title = "TV Views vs. Average YouTube Likes per Year",
+    subtitle = "Analyzing whether years with more Super Bowl viewers generate more online engagement",
+    x = "TV Views (millions)",
+    y = "Average YouTube Likes",
+    color = "Year",
+    caption = "Each point represents a year. Trend line shows overall correlation."
+  ) +
+  theme_minimal() +
+  
+  # Annotation for Max Outlier (Doritos 2012 Ad)
+  annotate("text", x = max_outlier$tv_views_million, y = max_outlier$avg_likes + 5000,
+           label = "Doritos 2012 Ad\n~275k Likes", color = "black", size = 4, hjust = 0.5) +
+  geom_segment(aes(x = max_outlier$tv_views_million, y = max_outlier$avg_likes - 20000,
+                   xend = max_outlier$tv_views_million, yend = max_outlier$avg_likes - 5000),
+               arrow = arrow(length = unit(0.2, "cm")), color = "black") +
+  
+  # Annotation for Second Outlier
+  annotate("text", x = second_outlier$tv_views_million, y = second_outlier$avg_likes + 5000,
+           label = paste0("NFL 2020 Ad\n~178k Likes"), 
+           color = "black", size = 4, hjust = 0.5) +
+  geom_segment(aes(x = second_outlier$tv_views_million, y = second_outlier$avg_likes - 20000,
+                   xend = second_outlier$tv_views_million, yend = second_outlier$avg_likes - 5000),
+               arrow = arrow(length = unit(0.2, "cm")), color = "black")
+
+```
+
+**Findings: The Impact of TV Exposure on YouTube Likes**
+
+The revised scatter plot provided more context by specifically highlighting two major outliers:
+	•	2012 Doritos Ad (275K likes)
+	•	2020 NFL LIV Commercial (175K likes)
+
+Additionally, the visualization used a ColorBrewer palette to differentiate the years, making it easier to spot trends over time. This helped reveal a positive correlation between TV views and online engagement, suggesting that in years with higher TV viewership, ads also received more YouTube likes. However, this trend was heavily influenced by the two outliers, indicating that virality, rather than TV exposure alone, may be a key driver of engagement.
+
+**Possible Explanations**
+	1.	Changing Viewing Habits & Online Presence
+	•	Over the years, people have become more active online, leading to higher engagement rates regardless of TV viewership.
+	•	The increase in social media usage and YouTube popularity likely contributes to the rising trend in likes over time.
+	2.	How People Watch the Super Bowl Has Changed
+	•	In the early 2000s, many people watched the game in sports bars or large group settings, where engagement with ads may have been lower.
+	•	Today, many viewers watch individually on personal devices and engage more actively by liking and sharing ads online.
+	•	Some may even skip TV ads altogether and watch the best commercials later on YouTube.
+	3.	Platform Shifts: The TikTok & Instagram Factor
+	•	Engagement patterns may be changing, with younger audiences shifting from YouTube to platforms like TikTok and Instagram.
+	•	Companies may now focus more on short-form ad placements, which could explain why YouTube likes alone may not capture the full picture of ad success.
+
+While TV exposure may still play a role in ad success, online engagement is shaped by many other factors, from virality and content strategy to shifts in audience behavior.
+
+## Conclusion and Key Takeaways:
+
+- Humor alone does not guarantee high engagement – combining humor with celebrities may reduce effectiveness.
+- Celebrity endorsements and patriotic themes tend to increase engagement, particularly in NFL and Pepsi ads.
+- NFL commercials dominate online engagement, likely due to audience interest and familiarity with the brand.
+- Higher TV views do not always translate into higher YouTube engagement, indicating that viral success is independent of broadcast reach.
+- Certain years, such as 2012 (Doritos) and 2020 (NFL), skew the trend due to highly viral ads.
+
+**Future Considerations:**
+
+- Expanding engagement analysis beyond YouTube (e.g., Twitter, TikTok, and sales data).
+- Investigating whether certain ad types lead to increased product sales.
+- Analyzing sentiment analysis from YouTube comments to understand audience reactions.
+
+
+Prepared by Ghadena Hgaig 
+
+January 2025
+
